# spark_beyond

./: .env.example  .gitignore  CLAUDE.md  DATA_SIZE_LIMITS_FLOWCHART.md  DATA_SIZE_LIMITS_IMPLEMENTATION.md  README.md  README_APP.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  app.py  databricks.yml  example.ipynb  feature_discovery.ipynb  main.py  pyproject.toml  pyspark_xgboost.ipynb  requirements.txt
backend/: __init__.py  app.py  main.py
backend/config/: __init__.py  resource_limits.py
backend/core/: discovery.py  general.py
backend/core/features/: auto_feature_generator.py  composeml_engine.py  feature_selector.py  featuretools_engine.py  insight_analyzer.py  preprocessing_enhanced.py  process.py  tsfresh_engine.py
backend/core/metrics/: base.py  segment_analysis.py  target_aggregation.py
backend/core/models/: __init__.py  baseline_models.py  evalml_runner.py  model_comparison.py
backend/middleware/: __init__.py  session_middleware.py
backend/notebooks/: create_requirements_txt.ipynb  enhanced_features_demo.ipynb  enhanced_features_demo_ hdfc.ipynb  enhanced_features_demo_hdfc.ipynb  example.ipynb  feature_discovery.ipynb  hdfc_demo_databricks.ipynb  pyspark_xgboost.ipynb
backend/routes/: data.py  features.py  insights.py  models.py
backend/schemas/: api_models.py
backend/services/: mlflow_service.py  spark_service.py
core/: discovery.py
core/features/: auto_feature_generator.py  feature_selector.py  process.py
core/metrics/: base.py  target_aggregation.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
(+40 files in other folders)
