[project]
name = "spark-beyond"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pyspark>=4.1.0",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "streamlit>=1.53.0",
    "xgboost>=3.1.3",
]
