[project]
name = "spark-beyond"
version = "0.2.0"
description = "ML Feature Discovery Platform with AutoML capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML and Data Processing
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    # "pyspark>=4.1.0",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "xgboost>=2.0.0", # Relaxed for LightAutoML compatibility
    # Advanced Feature Engineering & AutoML
    "ydata-profiling>=4.10.0",
    "featuretools>=1.31.0",
    "composeml>=0.10.1",
    "tsfresh>=0.20.2",
    "woodwork>=0.31.0", # Required by featuretools
    "polars>=0.20.0", # Enhanced data processing
    "numpy>=2.1.3",
    # AutoML
    "lightautoml>=0.4.2", # AutoML framework (Python 3.12 + pandas 2.x compatible)
    "fasttext-numpy2>=0.10.4",
    "nltk>=3.9.2",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    # Session persistence
    "redis>=5.0.0",
    # Experiment tracking
    "mlflow>=2.12.0",
]
